# learning_react

./: .env.example  .gitignore  AZURE_BLOB_STORAGE_SETUP.md  README.md  index.html  package-lock.json  package.json  run-telemetry.ps1  run_all.ps1
.claude/: CLAUDE.md  settings.local.json
.devcontainer/: docker-compose.yml
.devcontainer/backend/: Dockerfile  devcontainer.json
.devcontainer/frontend/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/prompts/: plan.prompt.md  tdd.prompt.md
.github/workflows/: deploy-azure.yml
data/: README.md
docs/: Domain validation-dnd.cameron.land-csv  auth-design-doc.md  auth-readme.md  entra-auth-implementation-checklist.md  hex-grid-design-doc-v2.md  hex-grid-proposal.md  local-development.md
src/: App.tsx  index.css
src/backend/: .dockerignore  .env.dev.template  .env.example  .env.prod  .env.test  .gitignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  run_server.ps1  run_server.py
src/backend/dnd_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/backend/src/: __init__.py  builder.py  config.py  main.py
src/backend/src/auth/: __init__.py  dependencies.py  models.py
src/backend/src/auth/providers/: __init__.py  base.py  entra.py  local_fake.py
src/backend/src/config/: __init__.py
src/backend/src/dependencies/: __init__.py  authentication.py  authorization.py
src/backend/src/dnd_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/backend/src/interfaces/: __init__.py  blob.py
src/backend/src/interfaces/auth/: __init__.py  auth.py
src/backend/src/log_config/: __init__.py  config.py  filters.py  formatters.py
src/backend/src/middleware/: __init__.py  trace_response.py
src/backend/src/models/: __init__.py  character.py  homebrew.py  map.py
src/backend/src/models/auth/: roles.py  user_principal.py
src/backend/src/providers/: azure_blob.py  azure_blob_provider.py  local_file_blob.py  local_file_blob_provider.py
src/backend/src/providers/auth/: authentication_provider.py  authorization_provider.py
src/backend/src/routes/: __init__.py  auth.py  character.py  homebrew.py  map.py
src/backend/src/storage/: __init__.py  character.py  homebrew.py  map.py
src/backend/src/telemetry/: __init__.py  config.py
src/backend/tests/: README.md  __init__.py  conftest.py  test_models.py  test_providers.py  test_routes.py  test_storage.py
src/backend/tests/integration/: test_auth_routes.py  test_auth_wiring.py  test_map_routes.py
src/backend/tests/unit/: test_authorization_provider.py  test_builder_auth.py  test_local_fake_auth.py  test_models.py  test_providers.py  test_routes.py  test_storage.py
(+101 files in other folders)
