[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnd-backend"
version = "0.1.0"
description = "Backend API for DND Stats Sheet application"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",

    # Ruff (lint + import sorting + formatter)
    "ruff>=0.4.0",
]

[tool.setuptools]
package-dir = {"dnd_backend" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

# -------------------------
# Ruff configuration
# -------------------------

[tool.ruff]
# Match Black's default line length
line-length = 88
# Target your minimum Python version
target-version = "py38"
# Ruff will ignore files in .gitignore by default; this just makes it explicit if you want later
respect-gitignore = true

[tool.ruff.lint]
# E,F: baseline correctness (pycodestyle + pyflakes)
# I: import sorting (isort)
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
